force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/SVMXA360__MaintenanceWorkRuleTemplate__c.object-meta.xml
<CustomObject>
    <description>Contains templated definitions of the Work Rules applied to a Maintenance Plan Template. Through the Template, Work Rule Definitions are used to provide dynamic automation to create a Maintenance Plan with Work Rules.</description>
    <label>Maintenance Work Rule Template</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Rule Template Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maintenance Work Rule Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>