force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/fields/SVMXA360__AdvancedExpression__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AdvancedExpression__c</fullName>
    <description>To store advanced expression values for the conditions defined in an A360 Maintenance Work Rule Template with two or more condition definitions.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Advanced Expression</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>