force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/fields/SVMXA360__ApplicableProductId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ApplicableProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Applicable Product with which this Work Rule Template Record is associated.</description>
    <inlineHelpText>The Applicable Product with which this Work Rule Template Record is associated.</inlineHelpText>
    <label>Applicable Product</label>
    <referenceTo>SVMXA360__ApplicableProduct__c</referenceTo>
    <relationshipLabel>Maintenance Work Rule Templates</relationshipLabel>
    <relationshipName>Maintenance_Work_Rule_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>