force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/fields/SVMXA360__MaintenancePlanTemplateId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__MaintenancePlanTemplateId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Maintenance Plan Template with which this Work Rule Template Record is associated.</description>
    <inlineHelpText>The Maintenance Plan Template with which this Work Rule Template Record is associated.</inlineHelpText>
    <label>Maintenance Plan Template</label>
    <referenceTo>SVMXA360__MaintenancePlanTemplate__c</referenceTo>
    <relationshipLabel>Maintenance Work Rule Templates</relationshipLabel>
    <relationshipName>Maintenance_Work_Rule_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>