force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/fields/SVMXA360__RecordsetFilterCriteriaId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RecordsetFilterCriteriaId__c</fullName>
    <description>A text field indicating the associated Recordset Filter Criteria for this Maintenance Work Rule Template. This field is only applicable if the MWR Type is defined as “Criteria-Based&quot;.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A text field indicating the associated Recordset Filter Criteria for this Maintenance Work Rule Template. This field is only applicable if the MWR Type is defined as “Criteria-Based&quot;.</inlineHelpText>
    <label>Recordset Filter Criteria</label>
    <length>18</length>
    <type>Text</type>
</CustomField>