force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/fields/SVMXA360__RecurrencePattern__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__RecurrencePattern__c</fullName>
    <description>Contains the frequency and duration governing the generation of work orders for a Maintenance Plan. This field is populated by a rule generator that is provided as part of the component for creating Work Rule Template records.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Contains the frequency and duration governing the generation of work orders for a Maintenance Plan. This field is populated by a rule generator that is provided as part of the component for creating Work Rule Template records.</inlineHelpText>
    <label>Recurrence Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>