force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/fields/SVMXA360__SM_TechnicalAttributeTemplate__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SM_TechnicalAttributeTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Technical Attribute Templates for Asset Technical Attributes. Utilized by A360 Maintenance Plans, this field influences what categories and attributes are available for selection in the condition definitions of a work rule template.</description>
    <label>Technical Attribute Template</label>
    <referenceTo>SVMXA360__SM_TA_Template__c</referenceTo>
    <relationshipLabel>Maintenance Work Rule Templates</relationshipLabel>
    <relationshipName>Maintenance_Work_Rule_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>