force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/fields/SVMXA360__SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SortOrder__c</fullName>
    <description>Indicates the sort order of the Maintenance Work Rule Template. Sort Order sets the precedence that determines how work orders are generated when a Maintenance Plan or Maintenance Asset has two or more maintenance work rules generating a work order for the same date. The lowest sort order value takes precedence. This field’s Sort Order will be mapped to the Maintenance Work Rule created based on the Template.</description>
    <inlineHelpText>Indicates the sort order of the Maintenance Work Rule Template. Sort Order sets the precedence that determines how work orders are generated when a Maintenance Plan or Maintenance Asset has two or more maintenance work rules generating a work order for the same date. The lowest sort order value takes precedence. This field’s Sort Order will be mapped to the Maintenance Work Rule created based on the Template.</inlineHelpText>
    <label>Sort Order</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>