force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/fields/SVMXA360__TemplateType__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TemplateType__c</fullName>
    <description>A formula-based field on the information in the Applicable Product field or the Maintenance Plan Template field. Template Type indicates whether the Maintenance Work Rule Template is specific to the Maintenance Plan Template record or to an Applicable Product record associated with the template. This type will influence whether the Work Rule created for a Maintenance Plan (using this template) is created for the Maintenance Plan itself or for a Maintenance Asset record associated with the Plan.</description>
    <formula>IF( AND( NOT( ISBLANK( SVMXA360__MaintenancePlanTemplateId__c ) ) , NOT( ISBLANK( SVMXA360__ApplicableProductId__c ) ) ) , &apos;Applicable Product&apos; , IF( AND( ISBLANK( SVMXA360__ApplicableProductId__c ) , NOT( ISBLANK( SVMXA360__MaintenancePlanTemplateId__c ) ) ) , &apos;Maintenance Plan Template&apos; , &apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A formula-based field on the information in the Applicable Product field or the Maintenance Plan Template field. Template Type indicates whether the Maintenance Work Rule Template is specific to the Maintenance Plan Template record or to an Applicable Product record associated with the template. This type will influence whether the Work Rule created for a Maintenance Plan (using this template) is created for the Maintenance Plan itself or for a Maintenance Asset record associated with the Plan.</inlineHelpText>
    <label>Template Type</label>
    <type>Text</type>
</CustomField>