force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/fields/SVMXA360__Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Type__c</fullName>
    <description>A field for indicating the type of Maintenance Work Rule this MWR Template will generate. Type can be Calendar-Based for Recurrence Pattern, or Criteria-Based for Recordset Filter Criteria.</description>
    <inlineHelpText>A field for indicating the type of Maintenance Work Rule this MWR Template will generate. Type can be Calendar-Based for Recurrence Pattern, or Criteria-Based for Recordset Filter Criteria.</inlineHelpText>
    <label>Maintenance Work Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calendar</fullName>
                <label>Calendar-based</label>
            </value>
            <value>
                <fullName>CriteriaValue</fullName>
                <label>Criteria-based</label>
            </value>
            <value>
                <fullName>Condition</fullName>
                <label>Condition-based</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>