force-app/main/default/objects/SVMXA360__MaintenanceWorkRuleTemplate__c/fields/SVMXA360__WorkTypeId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkTypeId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The indicated Work Type for this Maintenance Work Rule Template. The value in this field will be mapped to the Work Type field on the Maintenance Work Rule created as part of a Maintenance Plan.</description>
    <inlineHelpText>The indicated Work Type for this Maintenance Work Rule Template. The value in this field will be mapped to the Work Type field on the Maintenance Work Rule created as part of a Maintenance Plan.</inlineHelpText>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipLabel>Maintenance Work Rule Templates</relationshipLabel>
    <relationshipName>Maintenance_Work_Rule_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>